Fix banner height on mobile

--- a/_sass/_banner.scss
+++ b/_sass/_banner.scss
@@ -122,7 +122,7 @@
   @include breakpoint(small) {
     @include padding(7em, 3em);
     height: auto;
-    min-height: 0;
+    min-height: 50vh;
 
     h2 {
       font-size: 1.25em;
